unpackaged/main/default/objects/Visita__c/Visita__c.object-meta.xml
<CustomObject>
    <label>Cita/Visita</label>
    <nameField>
        <displayFormat>VIS-{0000}</displayFormat>
        <label>Número de Cita/Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Citas/Visitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>