unpackaged/main/default/objects/Visita__c/fields/AcabadoInteriores__c.field-meta.xml
<CustomField>
    <fullName>AcabadoInteriores__c</fullName>
    <label>Acabos Interiores</label>
    <type>TextArea</type>
</CustomField>