unpackaged/main/default/objects/Visita__c/fields/AcabadosExteriores__c.field-meta.xml
<CustomField>
    <fullName>AcabadosExteriores__c</fullName>
    <label>Acabados Exteriores</label>
    <type>TextArea</type>
</CustomField>