unpackaged/main/default/objects/Visita__c/fields/CasoResidente__c.field-meta.xml
<CustomField>
    <fullName>CasoResidente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Casos_Residente__c</referenceTo>
    <relationshipLabel>Citas/Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>