unpackaged/main/default/objects/Visita__c/fields/Casos_Relacionados__c.field-meta.xml
<CustomField>
    <fullName>Casos_Relacionados__c</fullName>
    <description>Campo utilizado en los templates</description>
    <label>Casos Relacionados</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>