unpackaged/main/default/objects/Visita__c/fields/Correo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Correo_de_Cliente__c</fullName>
    <formula>Cuenta__r.CorreoElectronico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo de Cliente</label>
    <type>Text</type>
</CustomField>