unpackaged/main/default/objects/Visita__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>