unpackaged/main/default/objects/Visita__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Inventario__r.Direccionoficial__c +&quot; &quot;+  Inventario__r.Unidad_privativa__c +&quot; &quot; + Inventario__r.Fracc__r.Name + &quot; MLI: &quot; +  Inventario__r.MLI__c</formula>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>