unpackaged/main/default/objects/Visita__c/fields/Entrega__c.field-meta.xml
<CustomField>
    <fullName>Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrega</label>
    <referenceTo>Entrega__c</referenceTo>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>