unpackaged/main/default/objects/Visita__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planeada</fullName>
            </value>
            <value>
                <fullName>Programada</fullName>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Reprogramada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>