unpackaged/main/default/objects/Visita__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>