unpackaged/main/default/objects/Visita__c/fields/Fecha_Habitabilidad__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Habitabilidad__c</fullName>
    <formula>Inventario__r.FechadeHabitabilidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Habitabilidad</label>
    <type>Date</type>
</CustomField>