unpackaged/main/default/objects/Visita__c/fields/FechaCalendar__c.field-meta.xml
<CustomField>
    <fullName>FechaCalendar__c</fullName>
    <label>FechaCalendar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>