unpackaged/main/default/objects/Visita__c/fields/FechaCalendarFin__c.field-meta.xml
<CustomField>
    <fullName>FechaCalendarFin__c</fullName>
    <label>FechaCalendarFin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>