unpackaged/main/default/objects/Visita__c/fields/Fechafindevisita__c.field-meta.xml
<CustomField>
    <fullName>Fechafindevisita__c</fullName>
    <label>Fecha fin de visita</label>
    <type>Date</type>
</CustomField>