unpackaged/main/default/objects/Visita__c/fields/Fechaprogramadadevisita__c.field-meta.xml
<CustomField>
    <fullName>Fechaprogramadadevisita__c</fullName>
    <label>Fecha programada</label>
    <required>true</required>
    <type>Date</type>
</CustomField>