unpackaged/main/default/objects/Visita__c/fields/Herreria__c.field-meta.xml
<CustomField>
    <fullName>Herreria__c</fullName>
    <label>Herrería</label>
    <type>TextArea</type>
</CustomField>