unpackaged/main/default/objects/Visita__c/fields/Horafindevisita__c.field-meta.xml
<CustomField>
    <fullName>Horafindevisita__c</fullName>
    <label>Hora fin de visita</label>
    <required>true</required>
    <type>Time</type>
</CustomField>