unpackaged/main/default/objects/Visita__c/fields/Horaprogramadadevisita__c.field-meta.xml
<CustomField>
    <fullName>Horaprogramadadevisita__c</fullName>
    <label>Hora programada</label>
    <required>true</required>
    <type>Time</type>
</CustomField>