unpackaged/main/default/objects/Visita__c/fields/Inconformidad__c.field-meta.xml
<CustomField>
    <fullName>Inconformidad__c</fullName>
    <label>Inconformidad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>