unpackaged/main/default/objects/Visita__c/fields/InstalacionesElectricas__c.field-meta.xml
<CustomField>
    <fullName>InstalacionesElectricas__c</fullName>
    <label>Instalaciones eléctricas</label>
    <type>TextArea</type>
</CustomField>