unpackaged/main/default/objects/Visita__c/fields/Inventario__c.field-meta.xml
<CustomField>
    <fullName>Inventario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventario</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Citas/Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>