unpackaged/main/default/objects/Visita__c/fields/MotivoNoEntrega__c.field-meta.xml
<CustomField>
    <fullName>MotivoNoEntrega__c</fullName>
    <label>Motivo de no entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de fecha/hora</fullName>
            </value>
            <value>
                <fullName>Canceló cita</fullName>
            </value>
            <value>
                <fullName>Demanda detalles de calidad</fullName>
            </value>
            <value>
                <fullName>Falta documento</fullName>
            </value>
            <value>
                <fullName>No asistió</fullName>
            </value>
            <value>
                <fullName>No es la ubicación</fullName>
            </value>
            <value>
                <fullName>No es lo que ofrecieron</fullName>
            </value>
            <value>
                <fullName>No quiere la casa</fullName>
            </value>
            <value>
                <fullName>Notario</fullName>
            </value>
            <value>
                <fullName>Cambio fecha y hora</fullName>
                <isActive>false</isActive>
                <label>Cambio fecha y hora</label>
            </value>
            <value>
                <fullName>Está de viaje</fullName>
                <isActive>false</isActive>
                <label>Está de viaje</label>
            </value>
            <value>
                <fullName>No se localiza</fullName>
                <isActive>false</isActive>
                <label>No se localiza</label>
            </value>
            <value>
                <fullName>Otro</fullName>
                <isActive>false</isActive>
                <label>Otro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>