unpackaged/main/default/objects/Visita__c/recordTypes/Cita.recordType-meta.xml
<RecordType>
    <fullName>Cita</fullName>
    <active>true</active>
    <label>Cita</label>
</RecordType>