unpackaged/main/default/objects/Visita__c/recordTypes/Visita.recordType-meta.xml
<RecordType>
    <fullName>Visita</fullName>
    <active>true</active>
    <label>Visita</label>
</RecordType>