unpackaged/main/default/objects/Visita__c/validationRules/Motivo_de_No_Entrega.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_de_No_Entrega</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Cita&quot;,
ISCHANGED( Estatus__c ),
ISBLANK( TEXT(MotivoNoEntrega__c) )
)</errorConditionFormula>
    <errorMessage>Falta incluir el motivo de no entrega</errorMessage>
</ValidationRule>