unpackaged/main/default/objects/Visita__c/validationRules/No_modificar_cuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_cuenta</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Profile.Id &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp;NOT(ISBLANK(  Cuenta__c )), (ISCHANGED(Cuenta__c)) ,null)</errorConditionFormula>
    <errorMessage>No es posible modificar al cliente asignado contacte a su administrador</errorMessage>
</ValidationRule>