unpackaged/main/default/objects/Visita__c/validationRules/No_modificar_entrega.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_entrega</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Id &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp; NOT(ISBLANK(   Entrega__c  )), (ISCHANGED(Entrega__c)) ,null)</errorConditionFormula>
    <errorMessage>No es posible modificar la entrega asignada contacte a su administrador</errorMessage>
</ValidationRule>