unpackaged/main/default/objects/Visita__c/validationRules/No_Modificar_Fecha.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Modificar_Fecha</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
ISCHANGED( Fechaprogramadadevisita__c),
ISCHANGED( Horaprogramadadevisita__c ),
ISCHANGED( Horafindevisita__c )
)
)</errorConditionFormula>
    <errorMessage>No se puede editar la fecha ni la hora, favor de generar una nueva programación</errorMessage>
</ValidationRule>