unpackaged/main/default/objects/Visita__c/validationRules/No_modificar_Inventario.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_Inventario</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Profile.Id &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp;NOT(ISBLANK( Inventario__c )), (ISCHANGED(Inventario__c)) ,null)</errorConditionFormula>
    <errorMessage>No es posible modificar el Inventario asignado contacte a su administrador</errorMessage>
</ValidationRule>