unpackaged/main/default/objects/Visita__c/validationRules/No_Reabrir_Visitas.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Reabrir_Visitas</fullName>
    <active>true</active>
    <errorConditionFormula>if(TEXT(PRIORVALUE(Estatus__c)) == &#39;Cancelada&#39;, true, false)</errorConditionFormula>
    <errorDisplayField>Estatus__c</errorDisplayField>
    <errorMessage>No se permite reabrir visitas</errorMessage>
</ValidationRule>