unpackaged/main/default/objects/Visita__c/validationRules/Tiempo_de_Visita.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiempo_de_Visita</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISNEW() ,
				IF(Fechaprogramadadevisita__c  &lt;  TODAY(), true, 
							IF(Fechaprogramadadevisita__c  ==  TODAY(),      
										IF(Horaprogramadadevisita__c &gt;  TIMEVALUE(NOW() - 0.25), 
													false, true) , false) )

)</errorConditionFormula>
    <errorMessage>No es posible crear Vistas para días anteriores</errorMessage>
</ValidationRule>