unpackaged/main/default/objects/Visita__c/listViews/MisCitas.listView-meta.xml
<ListView>
    <fullName>MisCitas</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Direccion__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Fechaprogramadadevisita__c</columns>
    <columns>Horaprogramadadevisita__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Mis Citas</label>
</ListView>