unpackaged/main/default/objects/Visita__c/listViews/MisVisitas.listView-meta.xml
<ListView>
    <fullName>MisVisitas</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Direccion__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Fechaprogramadadevisita__c</columns>
    <columns>Horaprogramadadevisita__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mis Visitas</label>
</ListView>